--- a/lms/static/sass/shared/_header.scss
+++ b/lms/static/sass/shared/_header.scss
@@ -424,8 +424,13 @@
     }
   }
 
+  .logo-header {
+    display: inline;
+  }
+
   .nav-account-management {
     margin: 0 auto;
+    display: inline;
   }
 
   .guest {
